<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kotlin Chat</string>

    <!-- START FRAGMENT -->
    <string name="fstart_greetings_label_text">WELCOME TO KOTLIN CHAT</string>
    <string name="fstart_info_label_upper_text">
        TO RUN PROPERLY\n
        THIS APP NEEDS ENABLED\n
        BLUETOOTH AND LOCALIZATION\n
        WITH GRANTED LOCATION PERMISSION\n
    </string>
    <string name="fstart_info_label_lower_text">
        BUTTON BELOW HELPS YOU SET\n
        ALL REQUIRED PERMISSIONS
    </string>
    <string name="fstart_request_button_text">PROCEED</string>

    <!-- MENU FRAGMENT -->
    <string name="fmenu_usernameHint">Enter username to continue…</string>
    <string name="fmenu_searchRoomText">SEARCH ROOM</string>
    <string name="fmenu_joinRoomText">JOIN ROOM</string>
    <string name="fmenu_startRoomText">START ROOM</string>

    <!-- ROOMS FRAGMENT -->
    <string name="frooms_connectText">CONNECT</string>
    <string name="frooms_backText">BACK</string>

    <!-- CHAT ROOM -->
    <string name="fchat_my_name_label_text">My name: %s</string>
    <string name="fchat_sendButtonText">=></string>
    <string name="fchat_quit_dialog_message">Are you sure you want to quit chat?</string>
    <string name="fchat_disconnect_dialog_message">You were disconnected from server.</string>
    <string name="fchat_dialog_positive_button">YES</string>
    <string name="fchat_dialog_ok_button">OK</string>
    <string name="fchat_dialog_negative_button" tools:ignore="ButtonCase">CANCEL</string>

</resources>