<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.StartFragment">

        <TextView
            android:id="@+id/greetings_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/fstart_greetings_label_text"
            android:textSize="@dimen/greetings_text_size"
            android:textColor="@android:color/white"
            android:background="@color/app_main_color"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/upper_guideline"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upper_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.075"/>

        <TextView
            android:id="@+id/info_label_upper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fstart_info_label_upper_text"
            android:textSize="@dimen/info_text_size"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upper_guideline"
            app:layout_constraintBottom_toTopOf="@id/lower_guideline"
            app:layout_constraintVertical_bias="0.1"/>

        <TextView
            android:id="@+id/info_label_lower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fstart_info_label_lower_text"
            android:textSize="@dimen/info_text_size"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_label_upper"
            app:layout_constraintBottom_toTopOf="@id/lower_guideline"
            app:layout_constraintVertical_bias="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lower_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"/>

        <Button
            android:id="@+id/request_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/fstart_request_button_text"
            android:textSize="@dimen/button_text_size"
            android:textColor="@android:color/white"
            android:background="@color/app_main_color"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lower_guideline"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>